@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST churn-0.0.13.gem 20992 SHA256 38b358d018ee5e0dff874c91670876309acdaa1bf1b525f93bd2f8098765ba99 SHA512 edf9581fb013c0bb40e13353df1c711e16f7b86fafe7622ca11595b9e0c95585c4a8c8eaad9cf1086a87ff317cc48dbc1575fb7ea7469f60ab904037e60db7ff WHIRLPOOL ba2577063791c134a821a63d57ce5c82f8fa29ec7dac502a0f7d17cd1ac65462425921644e92c27eea7003e756d24bfd153843058a8dcfdca4de8aa13d11b0ae
 DIST churn-0.0.15.gem 23040 SHA256 2d442d64d32325164cbc3c1407946c71bd5688e9410b0c44fb875252e91a08b1 SHA512 63985c30082d336de9f857a50c150776e66aed0c7921c0e673adc1383e4c67aedd4305f46213bc15e693487c63b1dc0016abff33505e4bbcc9fde2ebdaa99980 WHIRLPOOL ca397cc3899a3cc924776f9e2a9eb4d0a6fdf0e2fbbb2e1ca7d976fad90f3b055386ef179aaedbe6b48b67deaef615ec1d9f7a73ff22c9cd70ed1274457fe636
+DIST churn-0.0.24.gem 23040 SHA256 42490ebf826fee818fd067988cd692a12e79f73e0a5e629e1601baa14d6b0cf3 SHA512 8af2b21f4620fb819356233d10fe162ed89ad9de7c622eb8ff1aed0a457a2af318b34f8c9753a621a31c13c53927b54fe8a807bae31c1312828fb28b80607874 WHIRLPOOL 3538b6423927672c8419a33876d09c1349da9c3c190bb17bfe70c5f04a48304bb98ca673a3d095053272e5efca860ccd1870f03dd1ec590b6b41fc6685abf194
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAsu4YACgkQiIP6VqMIqNfP7QD+NRu7IkxmqZTakZ/+YV1Od2VI
-kNKKrwzLeSQ9E/c6XCwA/jxFOqz4DQxeNUFrsUwfcmJ9eBFdPfINDGA+Pm7NbwxM
-=heBv
+iF4EAREIAAYFAlBuhSsACgkQiIP6VqMIqNfVvQD/UDDgT/BoLK7eKwbi70ICejj9
+O96beMziwaP2mwAflpgA/1Q0t6EAeCv6zHxH4LaDRIFPo8+3kn3q1Bm5pBqC/iw1
+=h3ix
 -----END PGP SIGNATURE-----
