@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*churn-0.0.24 (05 Oct 2012)
+
+  05 Oct 2012; Hans de Graaff <graaff@gentoo.org> +churn-0.0.24.ebuild:
+  Version bump.
+
   16 Aug 2012; Hans de Graaff <graaff@gentoo.org> -churn-0.0.13.ebuild,
   churn-0.0.13-r1.ebuild, churn-0.0.15-r1.ebuild:
   Update dependency for package move.
